# hub-YGkV

./: .gitignore  README.md
刘鹏/week02/code/: README.md
刘鹏/week02/code/dotenv-env/: .env  .env.example  README.md  TEACHING.md  config.py  deepseek_client.py  main.py  pyproject.toml
刘鹏/week02/code/dotenv-env/dotenv_env/: __init__.py  config.py  factory.py  models.py
刘鹏/week02/code/dotenv-env/dotenv_env/clients/: __init__.py  anthropic_client.py  base.py  openai_client.py
刘鹏/week02/code/tutorial-llm-client/: 01_基础调用.py  02_流式输出.py  03_模型参数.py  04_Tools.py  05_JsonMode.py  06_MCP_Client.py  06_MCP_Server.py
刘鹏/week02/code/tutorial-prompt/: 02_零样本提示.py  03_少样本提示.py  04_思维链提示.py  05_自我一致性.py  06_生成知识提示.py
刘鹏/week02/code/tutorial-sklearn-torch/: 02_布尔索引.py  04_torch基础使用.py  05_torch梯度计算.py  06_sklearn线性回归.py  06_torch线性回归.py  06_torch线性回归2.py  07_torch线性回归.py  07_全链接层.py  08_全链接网络.py
刘鹏/week02/practice/: 01_thinking_mode_思考模式.md  02_multi_round_chat_多轮对话.md  03_chat_prefix_completion_前缀续写.md  04_fim_completion_FIM补全.md  05_json_mode_JSON输出模式.md  06_tool_calls_工具调用.md  07_kv_cache_上下文硬盘缓存.md  大模型提示词工程科普手册.md  深度学习原理科普手册.md
